--- a/app/assets/stylesheets/highlight/themes/monokai.scss
+++ b/app/assets/stylesheets/highlight/themes/monokai.scss
@@ -125,8 +125,12 @@ $monokai-gh: #75715e;
     color: $monokai-text-color;
   }
 
-  .line_expansion {
-    @include diff-expansion($monokai-bg, $monokai-border, $monokai-k);
+  .old-line_expansion {
+    @include old-diff-expansion($monokai-bg, $monokai-border, $monokai-k);
+  }
+
+  .diff-line-expand-button {
+    @include diff-expansion($gray-600, $gray-200, $gray-300, $white);
   }
 
   // Diff line
@@ -135,6 +139,10 @@ $monokai-gh: #75715e;
     &.old-nonewline .line_content,
     &.new-nonewline .line_content {
       @include dark-diff-match-line;
+    }
+
+    &.diff-grid-row {
+      @include dark-diff-expansion-line;
     }
 
     .diff-td.diff-line-num.hll:not(.empty-cell),
