--- a/app/assets/stylesheets/highlight/themes/solarized-dark.scss
+++ b/app/assets/stylesheets/highlight/themes/solarized-dark.scss
@@ -128,8 +128,12 @@ $solarized-dark-il: #2aa198;
     color: $solarized-dark-pre-color;
   }
 
-  .line_expansion {
-    @include diff-expansion($solarized-dark-line-bg, $solarized-dark-border, $solarized-dark-kd);
+  .old-line_expansion {
+    @include old-diff-expansion($solarized-dark-line-bg, $solarized-dark-border, $solarized-dark-kd);
+  }
+
+  .diff-line-expand-button {
+    @include diff-expansion(lighten($solarized-dark-pre-bg, 10%), $gray-200, lighten($solarized-dark-pre-bg, 20%), $white);
   }
 
   // Diff line
@@ -138,6 +142,10 @@ $solarized-dark-il: #2aa198;
     &.old-nonewline .line_content,
     &.new-nonewline .line_content {
       @include dark-diff-match-line;
+    }
+
+    &.diff-grid-row {
+      @include dark-diff-expansion-line;
     }
 
     .diff-td.diff-line-num.hll:not(.empty-cell),
