Fix font weight for snippet count
Changelog: fixed

--- a/app/views/shared/snippets/_snippet.html.haml
+++ b/app/views/shared/snippets/_snippet.html.haml
@@ -4,21 +4,20 @@
 %li.snippet-row.py-3{ data: { qa_selector: 'snippet_link', qa_snippet_title: snippet.title } }
   = image_tag avatar_icon_for_user(snippet.author), class: "avatar s40 d-none d-sm-block", alt: ''
 
-  .title
-    = link_to gitlab_snippet_path(snippet) do
-      = snippet.title
+  = link_to gitlab_snippet_path(snippet), class: "title" do
+    = snippet.title
 
-    %ul.controls{ data: { qa_selector: 'snippet_file_count_content', qa_snippet_files: snippet.statistics&.file_count } }
-      %li
-        = snippet_file_count(snippet)
-      %li
-        = link_to gitlab_snippet_path(snippet, anchor: 'notes'), class: ('no-comments' if notes_count == 0) do
-          = sprite_icon('comments', css_class: 'gl-vertical-align-text-bottom')
-          = notes_count
-      %li
-        %span.sr-only{ data: { qa_selector: 'snippet_visibility_content', qa_snippet_visibility: visibility_level_label(snippet.visibility_level) } }
-          = visibility_level_label(snippet.visibility_level)
-        = visibility_level_icon(snippet.visibility_level)
+  %ul.controls{ data: { qa_selector: 'snippet_file_count_content', qa_snippet_files: snippet.statistics&.file_count } }
+    %li
+      = snippet_file_count(snippet)
+    %li
+      = link_to gitlab_snippet_path(snippet, anchor: 'notes'), class: ('no-comments' if notes_count == 0) do
+        = sprite_icon('comments', css_class: 'gl-vertical-align-text-bottom')
+        = notes_count
+    %li
+      %span.sr-only{ data: { qa_selector: 'snippet_visibility_content', qa_snippet_visibility: visibility_level_label(snippet.visibility_level) } }
+        = visibility_level_label(snippet.visibility_level)
+      = visibility_level_icon(snippet.visibility_level)
 
   .snippet-info
     #{snippet.to_reference} &middot;
