--- a/app/views/admin/runners/edit.html.haml
+++ b/app/views/admin/runners/edit.html.haml
@@ -10,47 +10,48 @@
 
 #js-admin-runner-edit{ data: {runner_id: @runner.id, runner_url: admin_runner_path(@runner) } }
 
-.gl-overflow-auto
-  %h4.gl-font-lg.gl-my-5= _('Restrict projects for this runner')
+- if @runner.project_type?
+  .gl-overflow-auto
+    %h4.gl-font-lg.gl-my-5= _('Restrict projects for this runner')
 
-- if @runner.runner_projects.any?
-  %table.table{ data: { testid: 'assigned-projects' } }
+  - if @runner.runner_projects.any?
+    %table.table{ data: { testid: 'assigned-projects' } }
+      %thead
+        %tr
+          %th= _('Assigned projects')
+      - @runner.runner_projects.each do |runner_project|
+        - project = runner_project.project
+        - if project
+          %tr
+            %td
+              = render Pajamas::AlertComponent.new(variant: :danger,
+                dismissible: false,
+                title: project.full_name) do
+                .gl-alert-actions
+                  = link_to _('Disable'), admin_namespace_project_runner_project_path(project.namespace, project, runner_project), method: :delete, class: 'btn gl-alert-action btn-confirm btn-md gl-button'
+
+  %table.table{ data: { testid: 'unassigned-projects' } }
     %thead
       %tr
-        %th= _('Assigned projects')
-    - @runner.runner_projects.each do |runner_project|
-      - project = runner_project.project
-      - if project
-        %tr
-          %td
-            = render Pajamas::AlertComponent.new(variant: :danger,
-              dismissible: false,
-              title: project.full_name) do
-              .gl-alert-actions
-                = link_to _('Disable'), admin_namespace_project_runner_project_path(project.namespace, project, runner_project), method: :delete, class: 'btn gl-alert-action btn-confirm btn-md gl-button'
+        %th= s_('Runners|Select projects to assign to this runner')
+        %th
 
-%table.table{ data: { testid: 'unassigned-projects' } }
-  %thead
-    %tr
-      %th= s_('Runners|Select projects to assign to this runner')
-      %th
-
-  %tr
-    %td
-      = form_tag edit_admin_runner_path(@runner), id: 'runner-projects-search', class: 'form-inline', method: :get do
-        .input-group
-          = search_field_tag :search, params[:search], class: 'form-control gl-form-input', spellcheck: false
-          .input-group-append
-            = submit_tag _('Search'), class: 'gl-button btn btn-default'
-
-    %td
-  - @projects.each do |project|
     %tr
       %td
-        = project.full_name
+        = form_tag edit_admin_runner_path(@runner), id: 'runner-projects-search', class: 'form-inline', method: :get do
+          .input-group
+            = search_field_tag :search, params[:search], class: 'form-control gl-form-input', spellcheck: false
+            .input-group-append
+              = submit_tag _('Search'), class: 'gl-button btn btn-default'
+
       %td
-        .float-right
-          = form_for project.runner_projects.new, url: admin_namespace_project_runner_projects_path(project.namespace, project), method: :post do |f|
-            = f.hidden_field :runner_id, value: @runner.id
-            = f.submit _('Enable'), aria: { label: s_('Runners|Change to project runner') }, class: 'gl-button btn btn-sm', data: { confirm: (s_('Runners|You are about to change this instance runner to a project runner. This operation is not reversible. Are you sure you want to continue?') if @runner.instance_type?), confirm_btn_variant: 'danger' }
-= paginate_without_count @projects
+    - @projects.each do |project|
+      %tr
+        %td
+          = project.full_name
+        %td
+          .float-right
+            = form_for project.runner_projects.new, url: admin_namespace_project_runner_projects_path(project.namespace, project), method: :post do |f|
+              = f.hidden_field :runner_id, value: @runner.id
+              = f.submit _('Enable'), class: 'gl-button btn btn-sm'
+  = paginate_without_count @projects
