--- a/app/views/admin/topics/_form.html.haml
+++ b/app/views/admin/topics/_form.html.haml
@@ -3,11 +3,18 @@
 
   .form-group
     = f.label :name do
-      = _("Topic name")
-    = f.text_field :name, placeholder: _('My topic'), class: 'form-control input-lg', data: { qa_selector: 'topic_name_field' },
+      = _("Topic slug (name)")
+    = f.text_field :name, placeholder: _('my-topic'), class: 'form-control input-lg', data: { qa_selector: 'topic_name_field' },
       required: true,
       title: _('Please fill in a name for your topic.'),
       autofocus: true
+
+  .form-group
+    = f.label :title do
+      = _("Topic title")
+    = f.text_field :title, placeholder: _('My topic'), class: 'form-control input-lg', data: { qa_selector: 'topic_title_field' },
+      required: true,
+      title: _('Please fill in a title for your topic.')
 
   .form-group
     = f.label :description, _("Description")
