--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -130,6 +130,7 @@
   bottom: var(--review-bar-height, 0px);
   right: 0;
   transition: width $sidebar-transition-duration;
+  background-color: $white;
   z-index: 200;
   overflow: hidden;
 
