--- a/app/views/import/bulk_imports/status.html.haml
+++ b/app/views/import/bulk_imports/status.html.haml
@@ -8,4 +8,5 @@
   jobs_path: realtime_changes_import_bulk_imports_path(format: :json),
   source_url: @source_url,
   group_path_regex: Gitlab::PathRegex::NAMESPACE_FORMAT_REGEX_JS,
+  history_path: history_import_bulk_imports_path,
   group_url_error_message: group_url_error_message } }
