--- a/ee/app/views/projects/settings/_analytics_dashboards.html.haml
+++ b/ee/app/views/projects/settings/_analytics_dashboards.html.haml
@@ -3,8 +3,8 @@
   = s_('ProjectSettings|Select the project containing Analytics Dashboards configuration files.')
   = link_to(s_('ProjectSettings|What is Analytics Dashboards?'), help_page_path('user/analytics/value_streams_dashboard.md'))
 
-.analytics-dashboards-settings.settings-content
-  = gitlab_ui_form_for @project, html: { class: 'fieldset-form' } do |form|
+.settings-content#js-analytics-dashboards-settings
+  = gitlab_ui_form_for @project, html: { class: 'fieldset-form', data: { testid: 'analytics-dashboards-settings' } } do |form|
     = form_errors(@project)
 
     %fieldset
