--- a/ee/app/views/layouts/header/_licensed_user_count_threshold.html.haml
+++ b/ee/app/views/layouts/header/_licensed_user_count_threshold.html.haml
@@ -2,7 +2,7 @@
 .container-fluid.container-limited.pt-3
   = render Pajamas::AlertComponent.new(title: _('Your instance is approaching its licensed user count'),
     alert_options: { class: 'gitlab-ee-license-banner js-admin-licensed-user-count-threshold', data: { feature_id: Users::CalloutsHelper::ACTIVE_USER_COUNT_THRESHOLD, dismiss_endpoint: callouts_path } },
-    close_button_options: { type: 'button', 'aria-label' => _('Dismiss'), data: { testid: 'gitlab-ee-license-banner-dismiss' } }) do |c|
+    close_button_options: { type: 'button', data: { testid: 'gitlab-ee-license-banner-dismiss' } }) do |c|
     - c.with_body do
       = _('Your instance has %{remaining_user_count} users remaining of the %{total_user_count} included in your subscription. You can add more users than the number included in your license, and we will include the overage in your next bill.') % { remaining_user_count: remaining_user_count, total_user_count: total_user_count }
     - c.with_actions do
