Replace all jitsuKeys in frontend with trackingKey
This allows fonrtned to continue to function regardless of whether it
receives a jitsu key or a snowplow tracking key.

Backend returns the expected value depending on whether the snowplow
feature flag is enabled or not.

--- a/ee/app/views/product_analytics/_project_settings.html.haml
+++ b/ee/app/views/product_analytics/_project_settings.html.haml
@@ -1,4 +1,6 @@
 - return unless @project.feature_available?(:product_analytics) && Feature.enabled?(:product_analytics_admin_settings) && current_user.can?(:modify_product_analytics_settings, @project)
+- data = analytics_project_settings_data(@project)
+- link_start = '<a href="%{url}" rel="noopener noreferrer">'.html_safe % { url: project_analytics_dashboards_path(@project, vueroute: 'product-analytics-onboarding') }
 
 %section.settings.product-analytics.no-animate#js-product-analytics-settings{ class: ('expanded' if expanded) }
   .settings-header
@@ -6,10 +8,20 @@
     = render Pajamas::ButtonComponent.new(button_options: { class: 'js-settings-toggle' }) do
       = expanded ? _('Collapse') : _('Expand')
     %p
-      = s_('ProjectSettings|Configure product analytics to track events within your project applications.')
+      = s_('ProjectSettings|Instrument your application to track events and behaviors.')
       = link_to _('Learn more.'), help_page_path('user/product_analytics/index')
   .settings-content
+    .gl-mb-3
+    - if data && data[:tracking_key].present?
+      #js-product-analytics-instrumentation-settings{ data: data }
+    - else
+      = html_escape(s_('ProjectSettings|Product analytics needs to be set up before your application can be instrumented. Follow the %{link_start}set up process%{link_end}.')) % { link_start: link_start.html_safe, link_end: "</a>".html_safe }
+    %hr
     = gitlab_ui_form_for @project, html: { class: 'fieldset-form', id: 'product-analytics-settings', autocomplete: 'off' } do |f|
+      %h4
+        = s_('ProjectSettings|Connect to your instance')
+      %p
+        = s_('ProjectSettings|Override instance analytics configuration for this project')
       = f.fields_for :project_setting do |settings|
         %fieldset
           .form-group
