Scrolling by clicking in arrow (horizontal tabs)
When horizontal tabs don't fit the viewport, a left and a right arrow is
shown. We converted these two arrows into buttons and attach a left and
right scrolling event when clicked.

Changelog: changed

EE: true

--- a/ee/app/views/shared/credentials_inventory/index.html.haml
+++ b/ee/app/views/shared/credentials_inventory/index.html.haml
@@ -2,9 +2,9 @@
 
 .top-area
   .scrolling-tabs-container.inner-page-scroll-tabs.gl-flex-grow-1.gl-min-w-0.gl-w-full
-    .fade-left
+    %button.fade-left{ type: 'button', title: _('Scroll left'), 'aria-label': _('Scroll left') }
       = sprite_icon('chevron-lg-left', size: 12)
-    .fade-right
+    %button.fade-right{ type: 'button', title: _('Scroll right'), 'aria-label': _('Scroll right') }
       = sprite_icon('chevron-lg-right', size: 12)
     = gl_tabs_nav({ class: 'scrolling-tabs nav-links gl-border-0'}) do
       = gl_tab_link_to s_('CredentialsInventory|Personal Access Tokens'), credentials_inventory_path(filter: 'personal_access_tokens'), { item_active: active_when(show_personal_access_tokens?), class: 'gl-border-0!' }
