--- a/ee/app/views/groups/settings/domain_verification/_certificate.html.haml
+++ b/ee/app/views/groups/settings/domain_verification/_certificate.html.haml
@@ -27,9 +27,9 @@
   - if domain_presenter.user_defined_certificate?
     .form-group.gl-form-group.gl-max-w-80
       = render Pajamas::CardComponent.new(body_options: { class: 'gl-display-flex gl-align-items-center gl-justify-content-space-between gl-p-5' }) do |c|
-        - c.header do
+        - c.with_header do
           = s_('Certificate')
-        - c.body do
+        - c.with_body do
           %span
             = domain_presenter.pages_domain.subject || _('missing')
           = link_to _('Remove'),
