Updates storage enforcement banners to use MiB labels
Part of transitioning from power of 10 (MB) labels to more precise
power of 2 (MiB) labels

Changelog: changed

--- a/ee/app/views/shared/_old_repository_size_limit_setting.html.haml
+++ b/ee/app/views/shared/_old_repository_size_limit_setting.html.haml
@@ -1,7 +1,7 @@
 - return unless current_user.admin? && repo_size_limit_feature_available?
 
 .form-group.gl-form-group{ role: 'group' }
-  = form.label :repository_size_limit, _('Repository size limit (MB)'), class: 'gl-display-block col-form-label'
+  = form.label :repository_size_limit, _('Repository size limit (MiB)'), class: 'gl-display-block col-form-label'
   = form.number_field :repository_size_limit, value: form.object.repository_size_limit.try(:to_mb), class: 'form-control gl-form-input-sm', min: 0
   %small.form-text.text-gl-muted
     = size_limit_message_for_group(@group)
