--- a/ee/app/views/admin/application_settings/_repository_size_limit_setting.html.haml
+++ b/ee/app/views/admin/application_settings/_repository_size_limit_setting.html.haml
@@ -4,7 +4,7 @@
 
 .form-group
   = form.label :repository_size_limit, class: 'label-bold' do
-    = _('Size limit per repository (MB)')
+    = _('Size limit per repository (MiB)')
   = form.number_field :repository_size_limit, value: form.object.repository_size_limit.try(:to_mb), class: 'form-control gl-form-input', min: 0, title: _('Maximum size limit for each repository.'), data: { toggle: 'tooltip', container: 'body' }
   %span.form-text.text-muted#repository_size_limit_help_block
     = _('Includes LFS objects. It can be overridden per group, or per project. Set to 0 for no limit.')
