--- a/ee/app/views/projects/security/policies/index.html.haml
+++ b/ee/app/views/projects/security/policies/index.html.haml
@@ -7,7 +7,7 @@
   disable_security_policy_project: disable_security_policy_project.to_s,
   disable_scan_policy_update: disable_scan_policy_update.to_s,
   documentation_path: help_page_path('user/application_security/policies/index.md'),
-  empty_filter_svg_path: image_path('illustrations/issues.svg'),
+  empty_filter_svg_path: image_path('illustrations/empty-state/empty-search-md.svg'),
   empty_list_svg_path: image_path('illustrations/security-dashboard_empty.svg'),
   namespace_path: project.full_path,
   new_policy_path: new_project_security_policy_path(project) } }
