--- a/ee/app/views/projects/integrations/jira/issues/index.html.haml
+++ b/ee/app/views/projects/integrations/jira/issues/index.html.haml
@@ -7,4 +7,4 @@
   initial_sort_by: params[:sort],
   project_full_path: @project.full_path,
   issue_create_url: @jira_integration.new_issue_url,
-  empty_state_path: image_path('illustrations/issues.svg') } }
+  empty_state_path: image_path('illustrations/empty-state/empty-issues-md.svg') } }
