--- a/ee/app/views/groups/settings/_code_suggestions.html.haml
+++ b/ee/app/views/groups/settings/_code_suggestions.html.haml
@@ -12,6 +12,6 @@
 
 .form-group.gl-mb-3
   = f.gitlab_ui_checkbox_component :code_suggestions,
-    s_('CodeSuggestions|Projects in this group can use Code Suggestions in VS Code'),
-    help_text: s_('CodeSuggestions|By enabling this feature, you accept the %{link_start}Testing Terms of Use%{link_end}.').html_safe % { link_start: terms_link_start, link_end: '</a>'.html_safe },
+    s_('CodeSuggestions|Projects in this group can use Code Suggestions'),
+    help_text: s_('CodeSuggestions|Subject to the %{link_start}Testing Terms of Use%{link_end}.').html_safe % { link_start: terms_link_start, link_end: '</a>'.html_safe },
     checkbox_options: { data: { testid: 'code-suggestions-enable' } }
