--- a/ee/app/views/groups/sso/_enforce_terms.html.haml
+++ b/ee/app/views/groups/sso/_enforce_terms.html.haml
@@ -1,7 +1,9 @@
 - if Gitlab::CurrentSettings.current_application_settings.enforce_terms?
-  .form-group
-    = check_box_tag :terms_opt_in, '1', false, required: true
-    = label_tag :terms_opt_in do
-      - terms_link = link_to _("Terms of Service and Privacy Policy"), terms_path, target: "_blank"
-      - accept_terms_label = _("I accept the %{terms_link}") % { terms_link: terms_link }
-      = accept_terms_label.html_safe
+  .terms.form-group
+    = render Pajamas::CheckboxTagComponent.new(name: :terms_opt_in,
+      checkbox_options: { required: true },
+      label_options: { class: 'label-bold' }) do |c|
+      = c.label do
+        - terms_link = link_to _("Terms of Service and Privacy Policy"), terms_path, target: "_blank"
+        - accept_terms_label = _("I accept the %{terms_link}") % { terms_link: terms_link }
+        = accept_terms_label.html_safe
