Update form submit to use pajamas
Migrate form submit buttons to pajamas component on:
- app/views/groups/settings/_advanced.html.haml
- app/views/projects/edit.html.haml
- app/views/devise/sessions/email_verification.haml
- ee/app/views/product_analytics/_project_settings.html.haml
- ee/app/views/admin/application_settings
    /_product_analytics.html.haml

Changelog: changed

--- a/ee/app/views/admin/application_settings/_product_analytics.html.haml
+++ b/ee/app/views/admin/application_settings/_product_analytics.html.haml
@@ -59,4 +59,4 @@
           .form-text.text-muted
             = s_('AdminSettings|Used to retrieve dashboard data from the Cube instance.')
 
-      = f.submit _('Save changes'), class: 'gl-button btn btn-confirm'
+      = f.submit _('Save changes'), pajamas_button: true
