--- a/ee/app/views/product_analytics/_project_settings.html.haml
+++ b/ee/app/views/product_analytics/_project_settings.html.haml
@@ -65,4 +65,4 @@
             = settings.text_field :cube_api_key, class: 'form-control gl-form-input'
             .form-text.text-muted
               = s_('ProjectSettings|Used to retrieve dashboard data from the Cube instance.')
-      = f.submit _('Save changes'), class: 'gl-button btn btn-confirm'
+      = f.submit _('Save changes'), pajamas_button: true
