--- a/ee/app/views/admin/application_settings/_personal_access_token_expiration_policy.html.haml
+++ b/ee/app/views/admin/application_settings/_personal_access_token_expiration_policy.html.haml
@@ -4,4 +4,4 @@
 .form-group
   = form.label :max_personal_access_token_lifetime, _('Maximum allowable lifetime for access token (days)'), class: 'label-light'
   = form.number_field :max_personal_access_token_lifetime, class: 'form-control gl-form-input input-xs'
-  %span.form-text.text-muted#max_personal_access_token_lifetime= _('When enabled, existing access tokens may be revoked. Leave blank for no limit.')
+  %span.form-text.text-muted#max_personal_access_token_lifetime= _('When left blank, default value of 365 is applied. When set, value must be 365 or less. When changed, existing access tokens with an expiration date beyond the maximum allowable lifetime are revoked.')
