Fix trial and company form jumping on resize
- ui polish

Changed: other
EE: true

--- a/ee/app/views/registrations/company/new.html.haml
+++ b/ee/app/views/registrations/company/new.html.haml
@@ -14,7 +14,7 @@
           = _("About your company")
         #js-registrations-company-form{ data: create_company_form_data }
 
-      .col-md-4.gl-display-inline-flex.gl-vertical-align-middle
+      .col-md-4.company-illustration
         = image_tag 'illustrations/saas-trial-illustration.svg', alt: '', class: 'gl-display-none d-md-inline gl-w-full'
     - e.candidate do
       .col-md-6.m-6
