--- a/ee/app/views/trials/new.html.haml
+++ b/ee/app/views/trials/new.html.haml
@@ -14,5 +14,5 @@
 
     #js-trial-create-lead-form{ data: create_lead_form_data }
 
-  .col-md-4.gl-display-inline-flex.gl-vertical-align-middle
+  .col-md-4.trial-illustration
     = image_tag 'illustrations/saas-trial-illustration.svg', alt: '', class: 'gl-display-none d-md-inline gl-w-full'
