--- a/ee/app/views/trials/select.html.haml
+++ b/ee/app/views/trials/select.html.haml
@@ -32,5 +32,5 @@
       = submit_tag _('Start your free trial'), class: 'gl-button btn btn-confirm gl-w-20 gl-xs-w-full',
         data: { qa_selector: 'start_your_free_trial' }
 
-  .col-md-4.gl-display-inline-flex.gl-vertical-align-middle
+  .col-md-4.gl-mt-9
     = image_tag 'illustrations/saas-trial-illustration.svg', alt: '', class: 'd-none d-md-inline gl-w-full'
